use older syntax